--- a/P0/S1.md
+++ b/P0/S1.md
@@ -5,7 +5,8 @@
 Esta es una       linea
 Otro texto
 
-Esta es otra linea, si doy dosveces al enter me deja un espacio entre medias
+Esta es otra linea, si doy dos veces al enter me deja un espacio entre medias....
+Si solo doy un enter me saldrá seguido.
 
 espacio
 
@@ -26,17 +27,21 @@ Es un apartado
 * Elemento 2
     * Más elementos
     * tabulo
+    * lista compra
 
 ## Lista ordenada
 
 1. lista ordenada
 2. mas cosas
+3. continuando...
 
 # Texto
 
 Esta palabra está en **negrita**
 
 Esta está en *cursiva*
+
+La palabra tachada no me acuerdo como era
 
 # python
 
@@ -46,6 +51,8 @@ Esta está en *cursiva*
 a = 2
 print("Programa en python")
 print(f"La variable a vale {a}")
+b = "hola"
+print(b)
 ```
 
 # Enlaces 
@@ -79,6 +86,9 @@ Un par de citas de Isaac Asimov:
 
 > Estoy convencido de que la autoeducación es el único tipo de educación que existe
 
+Más citas:
+>Esta es una nueva cita de texto...
+
 # tablas
 
 
@@ -88,6 +98,12 @@ Un par de citas de Isaac Asimov:
 |  Fila 2 |   2   |   4  |   6  |  8   |
 |  Fila 3 |   3   |   6  |   9  |  12  |
 
+
+|         | desayuno | almuerzo| comida| Cena |
+|---------|-------|------|------|------|
+|  dia 1 |   cereales   |   yogurt  |   arroz  |  pescado   |
+|  dia 2|   tostada   |   nueces  |   lentejas  |  brócoli   |
+|  dia 3|   galletas   |   barrita  |   pollo  |  hamburguesa  |
 
 |          |  node.js  | Django | Flask | Electron |
 |----------|-----------|--------|-------|----------|
@@ -100,6 +116,9 @@ Un par de citas de Isaac Asimov:
 Teorema de pitágoras: $h^2 = x^2 + y^2$
 
 $\alpha=\beta + \gamma$
+
+Más formulas....
+$\mu=\sigma + \eta$
 
 $`T = \{\phi, \psi, \chi, \neg, \rightarrow, \left(, \right) \}`$   
 
@@ -117,6 +136,8 @@ $F = G \left( \frac{m_1 m_2}{r^2} \right)$
 > **_NOTA:_**  
 >  Esta es otra nota creada con markdown estándard
 
+>**_Notita:_**
+Tenemos otra notita más
 ---
 
 > [!NOTE]  
@@ -143,6 +164,14 @@ $F = G \left( \frac{m_1 m_2}{r^2} \right)$
         A-->C;
         B-->D;
         C-->D;
+```
+
+```
+    bloques;
+        T1-->S1;
+        T2-->S2;
+        T3-->S3;
+        T4-->S4;
 ```
 
 ---
@@ -181,5 +210,11 @@ stateDiagram-v2
 <details>
   <summary>Más información</summary>
   Esta información aparece al desplagarse....
+</details>
+
+
+<details>
+  <summary>Holaaa</summary>
+  Adios...
 </details>
 
