--- a/P0/S1.md
+++ b/P0/S1.md
@@ -14,7 +14,6 @@ Una linea
 hola  
 si doy espacio dos veces y enter me hace salto de linea sin espacio
 
-
 ### Otro apartado
 
 Es un apartado
@@ -88,7 +87,9 @@ Un par de citas de Isaac Asimov:
 
 Más citas:
 >Esta es una nueva cita de texto...
-
+hola
+hola hola   
+hola
 # tablas
 
 
